--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">MyFirstAppKotlin</string>
+    <string name="app_name">First Kotlin App</string>
+    <string name="questionButton">Question</string>
+    <string name="answerText">Please, enter answer</string>
+    <string name="answerButton">Send answer</string>
+    <string name="questionText">Answer the question</string>
 </resources>
