Add new PlantActivity.kt with plant image, plant name, plant description and opening using add button. After closing this PlantActivity.kt we return to PlantBookActivity.kt and show list of plants that we add

--- a/recycleviewexample/src/main/res/values/strings.xml
+++ b/recycleviewexample/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
-    <string name="app_name">Plant Hand Book</string>
+    <string name="app_name">Plants Hand Book</string>
     <string name="add_plant">Add plant</string>
+    <string name="choose_image_button">Next image</string>
+    <string name="done_button">Done</string>
+    <string name="enter_plant_name">Enter plant name</string>
+    <string name="enter_plane_description">Enter plane description</string>
 </resources>
