Add recycle view listener, that open EditActivity.kt and allow to show details of item

--- a/notebookexample/src/main/res/values/strings.xml
+++ b/notebookexample/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="empty">Empty</string>
     <string name="fa_button_add">fa_button_add</string>
     <string name="fa_button_save">fa_button_save</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
 </resources>
