Create SignInActivity.kt and add listener to sign_in_button to authorize with Google account

--- a/firebasechat/src/main/res/values/strings.xml
+++ b/firebasechat/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="send_button">Send</string>
     <string name="message">Message</string>
     <string name="start_chat">Start chat:</string>
+    <string name="google_signin">Google SignIn</string>
 </resources>
