--- a/firebasechat/src/main/res/values/strings.xml
+++ b/firebasechat/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="message">Message</string>
     <string name="start_chat">Start chat:</string>
     <string name="google_signin">Google SignIn</string>
+    <string name="sign_out">Sign Out</string>
 </resources>
